# teacher

./: .env.template  .gitignore  Dockerfile  FSM.py  README.md  config.py  docker-compose.yml  logging_conf.py  main.py  pyproject.toml
admin/: english.py  shop.py
alt_aiogram/: FSM.py  __init__.py  abyss.py  commands.py  dispatcher.py  middleware.py  redis.py
alt_aiogram/markups/: keyboards.py  photo_messages.py  text_messages.py  voice_messages.py
alt_aiogram/markups/core/: __init__.py
api/: __init__.py
cache/: __init__.py
core/: README.md  __init__.py  dispatcher.py  group_commands.py  loggers.py  middleware.py  objects.py  redis.py
core/handlers/: abyss.py  commands.py
core/markups/: __init__.py  keyboards.py  photo_messages.py  text_messages.py  voice_messages.py
core/tools/: __init__.py  emoji.py
database/: __init__.py  models.py  queries.py
group/: __init__.py  english.py  shop.py
group_handlers/: __init__.py  shop.py
group_markups/: __init__.py  shop.py
handlers/: __init__.py
heandlers/: __init__.py
markups/: __init__.py
models/: english.py  shop.py  word.py
private/: __init__.py  commands.py  english.py  shop.py
private_handlers/: __init__.py  commands.py  shop.py
private_markups/: __init__.py  shop.py
tools/: __init__.py  emoji.py  loggers.py
user/: __init__.py  english.py  shop.py
